# ScalableMixedModeMPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  local_test.py  run
.github/workflows/: x86.yml
cmake/: emp-aby-config.cmake
emp-aby/: emp-aby.h  he_interface.hpp  lut.h  modsum.txt  mp-circuit.hpp  utils.h  wire.h
emp-aby/converter/: a2bconverter.h  b2aconverter.h
emp-aby/io/: mp_io_channel.h  multi-io-base.hpp  multi-io.hpp  util.hpp
emp-aby/simd_interface/: arithmetic-circ.h  mp-simd-exec.h  simd.h  simd_exec.h
emp-aby/triple-providers/: bit-triple.h  bit-triple.hpp  mp-bit-triple.h  mp-bit-triple.hpp
test/: CMakeLists.txt  a2bconverter.cpp  adder64.txt  and.txt  arithmetic_circ.cpp  b2aconverter.cpp  bit_triple.cpp  circuit.cpp  he.cpp  lut.cpp  mp_bit_triple.cpp  mp_circuit.cpp  mp_simd_exec.cpp  positive.cpp  positive.txt  positive2.txt  relu.txt  relu2.txt  simd_exec.cpp
